# VideoBackgroundRemoval

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  app.py  bbox.txt  images_to_video.py  main.py  pyproject.toml  qt_app.py  redirect.py  requirements.txt  video_to_images.py
.github/ISSUE_TEMPLATE/: general-issue.yml
.github/workflows/: github-actions-black-formatting.yml
docs/: index.html
